syntax = "proto3";

package apptoken_service;

service AppToken {
    rpc Issue(IssueRequest) returns (IssueResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc MarkDiry(MarkDiryRequest) returns (MarkDiryResponse) {}
}


message IssueRequest {
    string tracing_ID = 1;
    string caller_uuid = 2; 
    string app_uuid = 3;
    string app_hash = 4;
    string app_origin = 5;
}

message IssueResponse {
    int32 status_code = 1;
    string msg = 2;
    MetaToken token = 3;
}

message GetRequest {
    string tracing_ID = 1;
    string app_uuid = 2;
}

message GetResponse {
    int32 status_code = 1;
    string msg = 2;
    MetaToken token = 3;
}

message MarkDiryRequest {
    string tracing_ID = 1;
    string for_app = 2;
    string jwt = 3;
}

message MarkDiryResponse {
    int32 status_code = 1;
    string msg = 2;
}


message MetaToken {
    string token = 1;
    int64 exp = 2;
}